# AudioCapturePlay

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/manna/capture/: MainActivity.java
app/src/main/java/com/manna/capture/adapter/: AdapterDiffCallback.java  BaseAdapter.java  ItemViewType.java
app/src/main/java/com/manna/capture/capture/: AudioCaptureActivity.java  AudioFileActivity.java  AudioFileEntity.java  AudioFileItemType.java  AudioPlayActivity.java
app/src/main/java/com/manna/capture/utils/: AudioFileUtils.java  PermissionUtils.java
app/src/main/java/com/manna/capture/widget/: CustomViewPager.java
app/src/main/res/drawable/: shape_bg_start_audio.xml
app/src/main/res/layout/: activity_audio_capture.xml  activity_audio_file.xml  activity_audio_play.xml  activity_main.xml  item_audio_file.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
library_audio/: build.gradle
library_audio/src/main/: AndroidManifest.xml
library_audio/src/main/cpp/: CMakeLists.txt  lame-lib.cpp  lame-lib.h
library_audio/src/main/cpp/libmp3lame/: lame.c  lame.h  lame_util.c  set_get.h
library_audio/src/main/java/com/manna/audio/: AudioCapture.java  AudioPlayInterface.java  AudioPlayService.java  AudioPlayer.java  LameEncode.java
library_audio/src/main/java/com/manna/audio/utils/: ByteUtils.java  Complex.java  FFT.java  FftFactory.java  FileUtils.java  TimeUtils.java
library_audio/src/main/java/com/manna/audio/widget/: WaveView.java
library_audio/src/main/res/values/: strings.xml
